--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@
         font-size: 70px;
       }
 
+      h2 {
+        color: #111;
+        font-family: 'Helvetica Neue', sans-serif;
+        font-size: 60px;
+      }
+
       h4 {
         color: #525252;
         font-family: 'Helvetica Neue', sans-serif;
         font-size: 40px;
-        font-weight: bold;
-        letter-spacing: -1px;
-        line-height: 1;
-        text-align: center;
       }
 
       h5 {
