--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
         color: #000;
         font-family: 'Helvetica Neue', sans-serif;
         font-size: 70px;
-	padding-bottom: 0px;
+	padding: 5px;
 	}
